--- a/NASAPictures/app/src/main/res/layout/grid_fragment.xml
+++ b/NASAPictures/app/src/main/res/layout/grid_fragment.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -7,14 +7,21 @@
     android:layout_height="match_parent"
     tools:context=".ui.grid.GridFragment">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/pictures_rv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
+        app:spanCount="3"
+        tools:itemCount="7"
+        tools:listitem="@layout/image_item" />
+
     <TextView
-        android:id="@+id/message"
+        android:id="@+id/error_msg_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="GridFragment"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_gravity="center"
+        android:visibility="gone"
+        tools:visibility="visible" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
