--- a/NASAPictures/app/src/main/res/layout/picture_detail_swiping_fragment.xml
+++ b/NASAPictures/app/src/main/res/layout/picture_detail_swiping_fragment.xml
@@ -1,20 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.grid.GridFragment">
+    android:layout_height="match_parent">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/pictures_rv"
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/pictures_view_pager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
-        app:spanCount="3"
-        tools:itemCount="7"
-        tools:listitem="@layout/picture_item" />
+        android:layout_height="match_parent" />
 
     <TextView
         android:id="@+id/error_msg_tv"
