--- a/NASAPictures/app/src/main/res/layout/picture_detail_swiping_fragment.xml
+++ b/NASAPictures/app/src/main/res/layout/picture_detail_swiping_fragment.xml
@@ -2,7 +2,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white">
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/pictures_view_pager"
