update picture detail page design and integrated data binding

--- a/NASAPictures/app/src/main/res/layout/detail_picture_item.xml
+++ b/NASAPictures/app/src/main/res/layout/detail_picture_item.xml
@@ -1,23 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="4dp"
-    android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageView
-        android:id="@+id/picture_image_view"
+    <data>
+
+        <variable
+            name="picture"
+            type="com.example.nasapictures.model.Picture" />
+    </data>
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:scaleType="centerCrop"
-        tools:srcCompat="@tools:sample/avatars" />
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/picture_title_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ellipsize="end"
-        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-        tools:text="Picture Title" />
-</LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="@dimen/page_margin">
+
+            <ImageView
+                android:id="@+id/picture_image_view"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/detail_image_height"
+                android:scaleType="centerCrop"
+                app:imageUrl="@{picture.hdurl}"
+                tools:srcCompat="@tools:sample/avatars" />
+
+            <TextView
+                android:id="@+id/picture_title_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/view_margin"
+                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+                app:setHtmlText="@{picture.title}"
+
+                tools:text="Picture Title" />
+
+            <TextView
+                android:id="@+id/picture_date_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/view_margin"
+                android:drawablePadding="@dimen/view_margin"
+                android:gravity="center_vertical"
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                app:drawableStartCompat="@drawable/ic_baseline_update_24dp"
+
+                app:setText="@{picture.date}"
+                tools:text="Picture Date" />
+
+            <TextView
+                android:id="@+id/picture_copyright_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/view_margin"
+                android:drawablePadding="@dimen/view_margin"
+                android:gravity="center_vertical"
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                android:textStyle="italic"
+                app:drawableStartCompat="@drawable/ic_baseline_copyright_24dp"
+                app:setText="@{picture.copyright}"
+                tools:text="Picture Copyright" />
+
+            <TextView
+                android:id="@+id/picture_subtitle_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/view_margin"
+                android:layout_marginTop="@dimen/view_margin"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                app:setText="@{picture.explanation}"
+                android:justificationMode="inter_word"
+                tools:text="Picture explanation" />
+
+        </LinearLayout>
+    </ScrollView>
+
+</layout>
